changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Make Python's Object.Face a String in both read and write.
Raise an error if invalid face is set.
Nicolas Weeger 2010-08-14

Fix accidentally broke 'tell' command.
Nicolas Weeger 2010-08-10

Fix broken 'curse' spell.
Nicolas Weeger 2010-08-08

Merge split lines in artifacts messages.
Nicolas Weeger 2010-08-08

Don't change decor's move_block in random maps, this messes item merging.
Nicolas Weeger 2010-08-07

Fix mover-related crash if in an inventory.
Nicolas Weeger 2010-08-07

Change plugin hooks prototype, don't return anything. Make functions static.
Nicolas Weeger 2010-08-07

Change event listener prototype for plugins to return int instead of void*.
Nicolas Weeger 2010-08-07

Remove unused 'command_' return values. Change function prototype to make
'params' const. Fix some const discarding.
Nicolas Weeger 2010-08-05

Make some DM functions static. Move 'command_dumpbelow' to c_wiz.c.
Nicolas Weeger 2010-08-05

Remove old 'ring_desc' function.
Nicolas Weeger 2010-08-05

Don't send the view when dropping items, that makes appear an opened
container was closed.
Nicolas Weeger 2010-08-04

Don't switch to golem mode if summon failed.
Nicolas Weeger 2010-08-04

CRE: tool to create base for smoothed face from a face.
Nicolas Weeger 2010-08-02

Fix bug #2546538: odd rune spell behavior.
Don't check grace cost against player's grace if no grace cost.
Nicolas Weeger 2010-08-01

Don't display attenuation or repell if denied.
Fixes part of #2941923: 11 bugs, alchemy, spell attunement, npc shops, client (WIN).
Nicolas Weeger 2010-08-01
